[package]
name = "gstd-fluent"
version = "1.1.0-rc.0"
authors = ["Gear Technologies"]
edition = "2021"
description = "A wrapper over gstd that provides a fluent interface to interact with the Gear Protocol"
repository = "https://github.com/gear-foundation/gstd-fluent"
license = "MIT"
keywords = ["gstd", "smart-contracts", "gear-tech", "gear-foundation"]
categories = ["api-bindings", "no-std"]

[dependencies]
gstd = { version = "=1.1.0", default-features = false }

[features]
default = ["panic-message"]

panic-handler = ["gstd/panic-handler"]
panic-message = ["gstd/panic-message"]
panic-location = ["gstd/panic-location"]

nightly = ["gstd/nightly"]
panic-info-message = ["gstd/panic-info-message"]
oom-handler = ["gstd/oom-handler"]

debug = ["gstd/debug"]
